--- a/modules/admin/actions/20:Add_customer/page.html
+++ b/modules/admin/actions/20:Add_customer/page.html
@@ -60,7 +60,8 @@
      </formoutput>
      <b>Information saved.<br>
       <autosite-dns-update><br>
-      <autosite-fs-update></b><p>
+      <autosite-fs-update><br>
+      <autosite-webadm-update></b><p>
    </if>
    <else>
      <b>Already saved.</b><p>
