Added some variables for blob.
Rev: tools/templateinfo.html:1.27

--- a/tools/templateinfo.html
+++ b/tools/templateinfo.html
@@ -829,6 +829,8 @@
   <insert _scheme="Dawn" variable_name="page_head_image_align" value="center">
   <insert _scheme="Dawn" variable_name="page_head_bar_color" value="black">
 
+  <insert _scheme="Dawn" variable_name="footer_align" value="center">
+
   <insert _scheme="Dawn" variable_name="nav_text_color" value="grey">
   <insert _scheme="Dawn" variable_name="nav_text_color_sel" value="grey">
   <insert _scheme="Dawn" variable_name="nav_text_color_mouse" value="grey">
@@ -908,10 +910,18 @@
 
   <!--  Blob  -->
   <insert _scheme="Blob" variable_name="template_name" value="blob.tmpl">
-  <insert _scheme="Blob" variable_name="corner_1_size" value="50">
-  <insert _scheme="Blob" variable_name="corner_2_size" value="30">
+  <insert _scheme="Blob" variable_name="corner_1_size" value="30">
+  <insert _scheme="Blob" variable_name="corner_2_size" value="20">
+
+  <insert _scheme="Blob" variable_name="title_color" value="#888888">
+  <insert _scheme="Blob" variable_name="title_align" value="center">
+  <insert _scheme="Blob" variable_name="title_size" value="0.8">
+  <insert _scheme="Blob" variable_name="title_shadow" value="1">
+  
 
   <insert _scheme="Blob" variable_name="bg_color" value="grey">
+  <insert _scheme="Blob" variable_name="bg_image_color" value="grey">
+  <insert _scheme="Blob" variable_name="bg_image" value="/img/bg/paper.pnm">
   <insert _scheme="Blob" variable_name="text_bg_color" value="white">
 
 </sql-insert>
