Added a new nav_template.
Rev: templates/blob.ntmpl:1.1
Rev: templates/img/blob/blob_nav.ppm:1.1
Rev: templates/img/blob/blob_nav_end.ppm:1.1
Rev: templates/img/blob/blob_nav_sel.ppm:1.1
Rev: tools/templateinfo.html:1.29

--- a/tools/templateinfo.html
+++ b/tools/templateinfo.html
@@ -498,6 +498,7 @@
   <insert name="Klee" value="Klee.ntmpl" _group_name="navigation files">
   <insert name="Dawn" value="dawn.ntmpl" _group_name="navigation files">
   <insert name="Sand" value="sand.ntmpl" _group_name="navigation files">
+  <insert name="Blob" value="blob.ntmpl" _group_name="navigation files">
 
   <!--  Align  -->
   <insert name="Left" value="left" _group_name="align">
@@ -896,6 +897,7 @@ z<insert value='122' name='Heavy vertical bar' _group_name='dingbat'>
   <insert _scheme="Blob" variable_name="bg_image_color" value="grey">
   <insert _scheme="Blob" variable_name="bg_image" value="/img/bg/paper.pnm">
   <insert _scheme="Blob" variable_name="text_bg_color" value="white">
+  <insert _scheme="Blob" variable_name="nav_name" value="blob.ntmpl">
 
   <!--  Blob 2  -->
   <insert _scheme="Blob 2" variable_name="template_name" value="blob2.tmpl">
