--- a/server/etc/config.html
+++ b/server/etc/config.html
@@ -1,8 +1,9 @@
-<!-- $Id: config.html,v 1.10 1997/12/15 01:32:47 peter Exp $
+<!-- $Id: config.html,v 1.11 1998/10/18 19:20:08 grubba Exp $
      name="Roxen First Page";
      doc="The page with the documentation for the configuration interface";
   -->
-<a href=http://www.roxen.com/><img border=0 src=/image/roxen-source-inside.jpg align=right xspacing=20></a>
+<a href=http://www.roxen.com/><img border=0 src=/image/roxen-source-inside.jpg
+ align=right xspacing=20 alt="Roxen -- Source inside"></a>
 <br>
 
 <b>This version, 1.2, of Roxen<font size=-2><sup>TM</sup></font>
