--- a/server/etc/config.int.html
+++ b/server/etc/config.int.html
@@ -1,8 +1,9 @@
-<!-- $Id: config.int.html,v 1.2 1997/12/15 01:47:02 peter Exp $
+<!-- $Id: config.int.html,v 1.3 1998/10/18 19:19:54 grubba Exp $
      name="Roxen First Page";
      doc="The page with the documentation for the config interface, Int";
   -->
-<a href=http://www.roxen.com/><img border=0 src=/image/roxen-source-inside.jpg align=right xspacing=20></a>
+<a href=http://www.roxen.com/><img border=0 src=/image/roxen-source-inside.jpg
+ align=right xspacing=20 alt="Roxen -- Source inside"></a>
 <br>
 
 <b>This version, 1.2 Int, of Roxen<font size=-2><sup>TM</sup></font>
