--- a/html/mail/edit_options.html
+++ b/html/mail/edit_options.html
@@ -28,7 +28,7 @@
 
 <template mail.tmpl>
 <title>Automail: Settings for <mail-userinfo address></title>
-<headline>Settings</headline>
+<headline>User settings</headline>
 <content>
   <cset variable=signature preparse><amail-user-variable default="" variable=signature></cset>
   <cset variable=firstname preparse><mail-userinfo firstname></cset>
