--- a/html/mail/index.html
+++ b/html/mail/index.html
@@ -2,7 +2,7 @@
 <template mail.tmpl preparse noparse>
 <title>Mail for <mail-userinfo real> &lt;<mail-userinfo email>&gt;</title>
 <content>
-  <expire_time now>
+  <expire-time now>
   <use file=macros>
   <set variable="gtextid&selected;" 
        eval="<gtext-id talign=center xspacing=20 yspacing=6 bold
