Made delete customer and delete user a bit less dangerous.
Rev: doc/TODO:1.7
Rev: doc/db.spec:1.39
Rev: html/mail/edit.html:1.6
Rev: html/templates/mail.tmpl:1.2
Rev: modules/admin/actions/20:Add_customer/page.html:1.14
Rev: modules/admin/tabs/10:Customer_configuration/page.html:1.9
Rev: modules/autoweb/autositefs.pike:1.31
Rev: modules/mail/clientlayer.pike:1.26
Rev: modules/mail/mailadmin.pike:1.10
Rev: modules/mail/mailtags.pike:1.23
Rev: templates/Klee.tmpl:1.10
Rev: templates/basic.tmpl:1.10
Rev: templates/blob.tmpl:1.8
Rev: templates/blob2.tmpl:1.3
Rev: templates/border.tmpl:1.5
Rev: templates/border2.tmpl:1.5
Rev: templates/dawn.tmpl:1.8
Rev: templates/img/roxenmail.gif:1.1
Rev: templates/night.tmpl:1.9
Rev: templates/sand.tmpl:1.10

--- a/modules/admin/actions/20:Add_customer/page.html
+++ b/modules/admin/actions/20:Add_customer/page.html
@@ -72,7 +72,7 @@
   <else>
     <preparse tag=tablify cellseparator=/// rowseparator=\\\
               cellpadding=0 cellspacing=0>
-      <form method=post>
+      <form method=get>
         <uservar title='Customer name:' type=text size=40 name=name>
         <uservar title='Login name:' type=text size=20 name=user_id>
         <uservar title='Password:' type=password size=20 name=password>
