--- a/html/mail/edit.html
+++ b/html/mail/edit.html
@@ -19,8 +19,7 @@
   <formoutput><delete-mail mail=#mail_id#></formoutput>
   <redirect to="./">
 </if>
-
-
+<else>
 
 <template mail.tmpl>
 <title>Mail composer for <mail-userinfo real> &lt;<mail-userinfo email>&gt;</title>
@@ -57,21 +56,7 @@
 
 <table>
 <formoutput>
-<comment>
-<form action="edit.html" method=GET>
-<mail-if-address-book>
-  <tr><td></td>
-  <td><select onChange='document.forms[0].submit()' name=quick_to>
-    <mail-address-book quote=$ variable=to>
-      <option $selected$ value='$email:quote=stag$'>$name$
-    </mail-address-book>
-    </select>
-  </td>
-  </tr>
-</mail-if-address-book>
-<input type=hidden name=mail_id value=#mail_id#>
-</form>
-</comment>
+
 <form enctype=multipart/form-data method=post action=edit.html>
 <input type=hidden name=mail_id value=#mail_id#>
   <tr><td align=right><b>To:</td><td>
@@ -86,10 +71,10 @@
 <br>
 <input type=submit name=send value="   Send   ">
 <input type=submit name=cancel value=" Save Draft">
-<input type=submit name=abort value=" Cancel ">
-<input type=hidden name=mail_id value=#mail_id#></tt>
+<input type=submit name=abort value=" Cancel "></tt>
 </form>
 </formoutput>
 </content>
 </template>
 </mail-verify-login>
+</else>
