Now inserts a random variable
Rev: html/mail/edit.html:1.7
Rev: html/mail/show_mail:1.7
Rev: html/mail/show_toplevel:1.8

--- a/html/mail/edit.html
+++ b/html/mail/edit.html
@@ -58,6 +58,7 @@
 <formoutput>
 
 <form enctype=multipart/form-data method=post action=edit.html>
+<mail-random-number-variable var=some_number>
 <input type=hidden name=mail_id value=#mail_id#>
   <tr><td align=right><b>To:</td><td>
 <input size=64 name=to value='#to:quote=html#'></td></tr>
