s/Events/Event Log/g
Rev: server/etc/restart.html:1.19

--- a/server/etc/restart.html
+++ b/server/etc/restart.html
@@ -1,4 +1,4 @@
-<!-- $Id: restart.html,v 1.18 1997/10/18 20:48:06 grubba Exp $
+<!-- $Id: restart.html,v 1.19 1999/01/08 00:55:45 grubba Exp $
      name="Roxen Restart Page";
      doc="The page displayed when Roxen is restarted";
   -->
@@ -19,7 +19,7 @@ alt="Roxen"></a></td><td>&nbsp;</td>
 ><font color=white size=-2>Administration Interface</font></td></tr>
 </table></td></tr></table></br>
 
-<a href="/Configurations?849717038"><img alt="/Virtual servers\_" src=/auto/unselected/Virtual%20servers border=0></a><a href="/Globals?849717039"><img alt="/Global variables\_" src=/auto/unselected/Global%20variables border=0></a><a href="/Errors/?849717042"><img alt="/Events\_" src=/auto/unselected/Events border=0></a><a href="/Actions?849717042"><img alt="/Actions\_" src=/auto/unselected/Actions border=0></a>
+<a href="/Configurations?849717038"><img alt="/Virtual servers\_" src=/auto/unselected/Virtual%20servers border=0></a><a href="/Globals?849717039"><img alt="/Global variables\_" src=/auto/unselected/Global%20variables border=0></a><a href="/Errors/?849717042"><img alt="/Event Log\_" src="/auto/unselected/Event%20Log" border=0></a><a href="/Actions?849717042"><img alt="/Actions\_" src=/auto/unselected/Actions border=0></a>
 
 
 <blockquote>
